--- a/.env.dist
+++ b/.env.dist
@@ -13,5 +13,11 @@ DATABASE_HOST=mariadb
 DATABASE_PORT=3306
 
 # Host
-HOST_NAME=drupal.develop
+HOST_NAME=drupal.local
 HOST_PORT=80
+
+# Drupal
+DRUPAL_ROOT=/var/www/html
+
+# Server
+SERVER_ROOT=/var/www/html/web
