--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       retries: 10
 
   php:
-    image: wodby/drupal-php:7.1-4.12.2
+    image: wodby/drupal-php:7.3
     env_file: ./.env
     environment:
       PHP_SENDMAIL_PATH: /usr/sbin/sendmail -t -i -S mailhog:1025
