A few improvements and updates. Container tags in .env file.

--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,9 @@ DATABASE_PORT=3306
 # Host
 HOST_NAME=drupal.develop
 HOST_PORT=80
+
+# Tags
+MARIADB_TAG=10.4-3.8.1
+PHP_TAG=7.3-4.15.8
+NGINX_TAG=1.16-5.8.14
+TRAEFIK_TAG=v1.7.16-alpine
