Docker v3, Drupal 8.8, more improvements.

--- a/.env.dist
+++ b/.env.dist
@@ -11,6 +11,7 @@ DATABASE_USER=drupal
 DATABASE_PASSWORD=drupal
 DATABASE_HOST=mariadb
 DATABASE_PORT=3306
+DB_DRIVER=mysql
 
 # Host
 HOST_NAME=drupal.develop
