--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.6",
         "drupal/console": "^1.9.4",
-        "drupal/core": "~8.8",
+        "drupal/core": "~8.9",
         "drush/drush": "^9.7.2",
         "webflo/drupal-finder": "^1.2.0",
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-        "webflo/drupal-core-require-dev": "~8.8"
+        "drupal/core-dev": "^8.8"
     },
     "conflict": {
         "drupal/drupal": "*"
